style: Fix out of box inputs

--- a/src/styles/components/handwritten-details.scss
+++ b/src/styles/components/handwritten-details.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  margin: auto 10rem;
+  margin: auto 2rem;
   padding-bottom: 1rem;
 
   @media (max-width: 1578px) {
